# heat

./: .bazelrc  .gitignore  LICENSE  README.md  WORKSPACE  run_all.sh
heat/: BUILD.bazel  cpuinfo.h  heat.cpp  mac_cpuinfo.h  method.cpp  method.h
heat/methods/: complex.cpp  empty.cpp  icc.cpp  math.cpp  simd.cpp  simple.cpp
logs/: result.1.txt  result.2.txt  result.3.txt
